style/style.scss
$orange: #fd7e14;
$green: rgb(0,188,140);

#title{
    padding: 15px 0px 5px 0px;
    background-color:$orange;
    &:hover{
        background-color: #ffa600;
        cursor: pointer;
    }
}

#categorieList{
    background-color: black;
    display:flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    padding: 20px 30px 5px 30px;
    height:100%;
    transition: ease-in-out 0.2s;
    &.hidden{
        height:0px;
        overflow:hidden;
        padding:0px;
        transition: ease-in-out 0s;
    }
    a{text-decoration: none;}
    p{
        font-weight: 600;
        margin-left: 6px;
        margin-right: 6px;
        color: black;
        background-color: white;
        padding: 5px 10px;
        border-radius: 3px;
        &:hover{
            background: linear-gradient(-45deg,rgb(35, 255, 200), rgb(177, 219, 209));
            cursor: pointer;
        }
    }
}

#menu{
    padding: 20px 0px;
    .container-fluid{
        display:flex;
        justify-content: space-between;
        align-items: center;
    }
    #searchInput{
        margin-right: 10px;
    }
    #btnOrder{
        margin-right: 10px;
    }
    ul{margin-right: 30px;}
    box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.096);
    input{background-color: black; color: white;}

    #create-btn{
        margin-right: 15px;
        padding: 12px 18px;
        border-radius: 50%;
        font-size: 1.4rem;
        span{
            position: relative;
            left:1px;
        }
    }
    .dropdown-menu{z-index: 99;}
}

.product-card{
    box-sizing: border-box;
    padding-top: 16px;
    position: relative;

    button{
        border: none;
        position: absolute;
        left: 25px;
        top: 25px;
        border-radius: 0;
        padding: 6px 10px;
        z-index: 1;
        color: white;
        background-color: rgb(36, 36, 36);
        display: none;
        border-radius: 50%;
    }
    &:hover{
        button{display: block;}
    }

    .product-card-in{
        display: flex;
        background-color: #ced4d8;
        box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.05);
        opacity: 0.8;
        height: 100%;
        &:hover{
            cursor: pointer;
            opacity: 1;
            background-color: #edf4ff;
            box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.1);
        }
        img{
        width: 150px;
        height: 100%;
        object-fit: cover;
        }
        .product-card-text{
            padding: 10px;
            color: #303030;
            width: 100%;
            h2{
                margin-bottom: 0px;
            }
            .card-text-up{
                display: flex;
                justify-content: space-between;
                flex-wrap: wrap;
                width: 100%;
                div:nth-child(2){
                    color: $orange;
                    font-size: 1.8rem;
                    font-weight: 600;
                }
            }
        }
    }
}

.product-cat{
    display: block;
    margin-top: 5px;
    font-weight: 600;
    color: white;
    span{
        background-color: $orange;
        padding: 5px;
    }
}
.product-cat-mod{
    display: block;
    margin-top: 5px;
    font-weight: 600;
    color: white;
    background-color: $orange;
        padding: 5px;
}
.price{
    color: $orange;
    font-size: 3rem;
    font-weight: 600;
}

.modal{
    position: fixed;
    top: 0;
    // left: +100vw;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.83);
    overflow-y: scroll;
    transition: ease-in-out 0.5s;

    .modal-btns{
        display: flex;
        justify-content: space-between;
        font-size: 2rem;
        position: fixed;
        top: 5vh;
        right: -100vw;
        transition: ease-in-out 0.8s;
        width: 85px;
        div{
            background-color: black;
            border-radius: 50%;
            height: 32px;
        span{
            position: relative;
            top:-8px;
        }
        &:hover:nth-child(1){
            cursor: pointer;
            color:$green;
        }
        &:hover:nth-child(2){
            cursor: pointer;
            color:$orange
        }
        }
    }
    .modal-btn{
        display: flex;
        font-size: 2rem;
        position: fixed;
        top: 5vh;
        right: -100vw;
        transition: ease-in-out 0.8s;
        div{
            background-color: black;
            border-radius: 50%;
            height: 32px;
        span{
            position: relative;
            top:-8px;
        }
        &:hover:nth-child(1){
            cursor: pointer;
            color:$orange;
        }
        }
    }

    &.active{
        left:0;
        transition: ease-in-out 0.5s;
        .modal-btns{
            transition: ease-in-out 0.8s;
            top: 5vh;
            right: 5vw;
        }
        .modal-btn{
            transition: ease-in-out 0.8s;
            top: 5vh;
            right: 5vw;
        }
    }
}

#product-modal{
    left: +100vw;
    z-index: 3;
    @extend .modal;
    .container form{
        padding: 11vh 6vw 0 6vw;
        display: flex;
        justify-content: center;
    }

    .hide{display: none;}

    #product-modal-title{
        font-size: 2rem;
        font-weight: 600;
        color: $orange;
        text-align: center;
        margin-bottom: 40px;
    }
}
#product-modal-left{
    height: 100%;
    padding-right: 30px;
    width: 286px;
    position: relative;
    img{
        width: 256px;
        height: 256px;
        object-fit: cover;
        margin-bottom: 15px;
        }
}
#product-modal-left>button:nth-child(1){
    border-radius: 50%;
    font-size: 2rem;
    position: absolute;
    right:10px;
    top: 200px;
    span{
        position: relative;
        left: 3px;
    }
}
.upload-btn{
    display: block;
    width: 100%;
}

#product-modal-right{
    flex: 0 100%;
    background-color: #444;
    padding: 20px;
    div:nth-child(5){
        color: $orange;
        font-size: 3rem;
        font-weight: 600;
    }
    textarea,#form-vendor{background-color: rgb(19, 19, 19); color: white;}
}
.modalSec{
    left: +100vw;
    z-index: 4;
    @extend .modal;
    .container{
        display:flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        min-height:100vh;
    }
}

#delete-modal , #uppic-modal , #upticket-modal , #upmanual-modal , #newcat-modal{
    @extend .modalSec;
}


.modal-in{
    background-color: #303030;
    width: 100%;
    padding: 40px;
    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.05);
    max-width: 550px;
    .title-mod{
        font-size: 1.4rem;
        text-align: center;
        margin-bottom: 30px;
    }
    button{width: 100%;margin:6px; position: relative;left:-6px}
    .icon{margin-right: 10px;}
}

#delete-yesno{
    display: flex;
}

.hideRight{
    position:absolute;
    right:150vw;
}

#filePicture , #fileTicket , #fileManual{
    display:none;
}

.labelbtn{
    width:100%;
}
.page-link{cursor:pointer;}

#categorieTitle{
    font-size: 1.3rem;
    margin-bottom: 5px;
}

#msg-modal{
    width: 300px;
    text-transform: uppercase;
    text-align: center;
    font-weight: 600;
    position: fixed;
    right:-400px;
    top: 100px;
    span{padding-right: 15px;padding-left: 5px;}
    z-index: 9;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.37);
    transition: ease-in-out 0.8s;

}
#msg-modal.alertshow{
    position: fixed;
    right:30px;
    top: 100px;
    transition: ease-in-out 0.4s;
}
#menu-right{display:flex;}
#menu-left{display:flex; width: 100%; flex: 0 , 100%; align-items: center;}
body{
    background-image: url("../images/background.jpg");
    background-repeat: repeat;
}
// RESPONSIVE
// XL___base_____________________________________________________________________________

// L_____________________________________________________________________________________
@media (max-width: 1199.98px) {

}

// M_____________________________________________________________________________________
@media (max-width: 991.98px) {

}

// S_____________________________________________________________________________________
@media (max-width: 767.98px) {
    #userN{
        display:block;
    }
}

// XS_____________________________________________________________________________________
@media (max-width: 575.98px) {
    #userN{
        display:none
    }
    #brand{
        width:180px;
    }
    #menu{
        .container-fluid{
            flex-wrap: wrap;
        }
    }
    #menu-right{margin-top:8px; justify-content: flex-end; width: 100%;}
}

